[package]
name = "fishinge_worker"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"
