[package]
name = "fishinge_worker"
version = "0.0.1"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
hmac = "0.12.1"
serde_json = "1.0.96"
sha2 = "0.10.6"
worker = "0.0.16"

[profile.release]
lto = true
strip = true
codegen-units = 1
